# VA_final

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md
data/: camera.yaml  camera_ip11.yaml  camera_webcam.yaml  camera_webcamtest.yaml
doc/html/: a4_8cpp.html  a4_8cpp__incl.map  a4_8cpp__incl.md5  a4_8hpp.html  a4_8hpp__dep__incl.map  a4_8hpp__dep__incl.md5  a4_8hpp__incl.map  a4_8hpp__incl.md5  a4_8hpp_source.html  annotated.html  calib_8cpp.html  calib_8cpp__incl.map  calib_8cpp__incl.md5  calib_8hpp.html  calib_8hpp__dep__incl.map  calib_8hpp__dep__incl.md5  calib_8hpp__incl.map  calib_8hpp__incl.md5  calib_8hpp_source.html  calibrage_8cpp.html  calibrage_8cpp__incl.map  calibrage_8cpp__incl.md5  classes.html  cleanup_8hpp.html  cleanup_8hpp__dep__incl.map  cleanup_8hpp__dep__incl.md5  cleanup_8hpp__incl.map  cleanup_8hpp__incl.md5  cleanup_8hpp_source.html  dir_000005_000000.html  dir_000006_000000.html  dir_000007_000000.html  dir_65d600aab5b7177ee2dccfac7c04bb8a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6e69bf73d6216e22bc47524774a53339.html  dir_6e69bf73d6216e22bc47524774a53339_dep.map  dir_6e69bf73d6216e22bc47524774a53339_dep.md5  dir_89f12bade8d9fea319d71e72377b803c.html  (+81 more)
include/ar/: calib.hpp  physics.hpp  pose.hpp  temporal.hpp
include/detect/: a4.hpp  roi.hpp
include/glx/: cleanup.hpp  mesh.hpp  shaders.hpp  texture.hpp
src/: calibrage.cpp  main.cpp  record_cam_gui  recordvideo.cpp
src/ar/: calib.cpp  physics.cpp  pose.cpp  temporal.cpp
(+66 files in other folders)
